--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=VT323');
+
+/* override browser default */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Open Sans;
+  user-select:	none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* use viewport-relative units to cover page fully */
+body {
+  height: 100vh;
+  width: 100vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* include border and padding in element width and height */
+* {
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.full {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 55px);
+  justify-items: center;
+  align-items: center;
+  grid-template-rows: 1fr repeat(5, 55px);
+  grid-gap: 10px;
+  background-color: rgb(200 200 200);
+  padding: 15px;
+  border-radius: 20px;
+  
+}
+
+#clear { grid-area: 2/1/3/3 }
+#zero { grid-area: 6/1/7/3 }
+#equals  { 
+  height: 100%;
+  grid-area: 5/4/7/5 }
+
+.button {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: white;
+  border: 0.5px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(120 120 120);
+}
+
+.screen {
+  background-color: rgb(120 120 120);
+  border-style: none;
+  width: 100%;
+  height: 100%;
   color: white;
+  border-radius: 7px;
+  grid-area: 1/1/2/5;
+  flex-direction: column;
+  text-align: right;
+  padding: 5px;
+  font-family: VT323;
+  word-break: break-all;
 }
 
-.App-link {
-  color: #61dafb;
+.equation {
+  width: 100%;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display {
+  width: 100%;
+  font-size: 32px;
+}
+
+.footer {
+  font-size: 12px;
+  width: 100%;
+  text-align: center;
 }
