--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=VT323');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=VT323");
 
 /* override browser default */
 html,
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Open Sans;
-  user-select:	none;
+  user-select: none;
 }
 
 /* use viewport-relative units to cover page fully */
@@ -40,14 +40,18 @@ body {
   background-color: rgb(200 200 200);
   padding: 15px;
   border-radius: 20px;
-  
 }
 
-#clear { grid-area: 2/1/3/3 }
-#zero { grid-area: 6/1/7/3 }
-#equals  { 
+#clear {
+  grid-area: 2/1/3/3;
+}
+#zero {
+  grid-area: 6/1/7/3;
+}
+#equals {
   height: 100%;
-  grid-area: 5/4/7/5 }
+  grid-area: 5/4/7/5;
+}
 
 .button {
   width: 100%;
