--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=VT323");
 
-/* override browser default */
 html,
 body {
   margin: 0;
@@ -10,15 +9,17 @@ body {
   user-select: none;
 }
 
-/* use viewport-relative units to cover page fully */
 body {
   height: 100vh;
   width: 100vw;
 }
 
-/* include border and padding in element width and height */
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: #000;
 }
 
 .full {
