--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ a {
   align-items: center;
   grid-template-rows: 1fr repeat(5, 55px);
   grid-gap: 10px;
-  background-color: rgb(200 200 200);
+  background-color: #C8C8C8;
   padding: 15px;
   border-radius: 20px;
 }
@@ -43,9 +43,11 @@ a {
 #clear {
   grid-area: 2/1/3/3;
 }
+
 #pad-0 {
   grid-area: 6/1/7/3;
 }
+
 #equals {
   height: 100%;
   grid-area: 5/4/7/5;
@@ -55,16 +57,16 @@ a {
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  background-color: white;
+  background-color: #FFF;
   border: 0.5px black solid;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(120 120 120);
+  color: #767676;
 }
 
 .screen {
-  background-color: rgb(120 120 120);
+  background-color: #767676;
   border-style: none;
   width: 100%;
   height: 100%;
