--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a {
   color: #000;
 }
 
-.full {
+#root > div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,18 +53,7 @@ a {
   grid-area: 5/4/7/5;
 }
 
-.button {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #767676;
-}
-
-.screen {
+div.grid-container div.screen {
   background-color: #767676;
   border-style: none;
   width: 100%;
@@ -77,6 +66,17 @@ a {
   padding: 5px;
   font-family: VT323;
   word-break: break-all;
+}
+
+.grid-container > div {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #767676;
 }
 
 .equation {
